@@ -763,17 +763,7 @@
                 </h1>
                 <h3>Web Developer</h3>
                 <h4><a style="color: white;font-size: 15px;" href="/comments.html">Comments closed :(</a><br>
-                    <a style="color: #73ad21;font-size: 15px;" href="javascript:alert('Big changes during this weekend Feb 19 - 20 Note this will not happen during the weekday for reasons you know.\n\nHello, this weekend I will be working on some updates. This will include (not limited to)\n
-                    - Fixing Tetris. IDK why it is broken lol.\n
-                    - Adding Vex5 (possible, maybe delayed)\n
-                    - Adding Zombs Royale. My first multi-player game! Pog!\n
-                    - Other games could be added if I can get everything else done.\n
-                    - Going through all of your bug reports on github.\n
-                    - More improvements to anti-steal systems.\n
-                    - General improvements and reading all feedback.\n
-                    - Reworking comment box because it was abused.\n
-                    - And for all of those who do not know what is going on with the comment box, I will talk about it later.\n\n
-                    I hope that these changes will improve the website and give yall a better experiance! I will reopen the feedback form after this to see what you think! Thats all from me for now!\n-Echo\n\nAlso I guess this thing is now called the green text. I do not know what to think of that lol');">Site will be offline! Please read!</a>
+                    <a style="color: #73ad21;font-size: 15px;" href="/dump/changelog.txt">Whats new?</a>
                 <div class="wrapper-img"><img style="width: 200px; height: 200px;" src="/img/double.png" alt="" /><img class="img-hide" style="width: 200px; height: 200px;" src="/img/double2.gif" alt="" /></div>
             </div>
             <div class="copyright">
